- Don't redirect to slash route when method doesn't match, see pull request
  ``#907``.
- Fix a bug when using ``SharedDataMiddleware`` with frozen packages, see pull
  request ``#959``.
- `Range` header parsing function fixed for invalid values ``#974``.
- Add support for byte Range Requests, see pull request ``#978``.
- Use modern cryptographic defaults in the dev servers ``#1004``.

Version 0.11.12
---------------

- Fix more bugs in multidicts regarding empty lists. See ``#1000``.
- Add some docstrings to some `EnvironBuilder` properties that were previously
  unintentionally missing.

Version 0.11.11
---------------

Released on August 31st 2016.

- Fix JSONRequestMixin for Python3. See #731
- Fix broken string handling in test client when passing integers. See #852
- Fix a bug in ``parse_options_header`` where an invalid content type
  starting with comma or semi-colon would result in an invalid return value,
  see issue ``#995``.
- Fix a bug in multidicts when passing empty lists as values, see issue
  ``#979``.
- Fix a security issue that allows XSS on the Werkzeug debugger. See ``#1001``.

Version 0.11.10
---------------

Released on May 24th 2016.

- Fixed a bug that occurs when running on Python 2.6 and using a broken locale.
  See pull request #912.
- Fixed a crash when running the debugger on Google App Engine. See issue #925.
- Fixed an issue with multipart parsing that could cause memory exhaustion.

Version 0.11.9
--------------

Released on April 24th 2016.

- Corrected an issue that caused the debugger not to use the
  machine GUID on POSIX systems.
- Corrected a Unicode error on Python 3 for the debugger's
  PIN usage.
- Corrected the timestamp verification in the pin debug code.
  Without this fix the pin was remembered for too long.

Version 0.11.8
--------------

Released on April 15th 2016.

- fixed a problem with the machine GUID detection code on OS X
  on Python 3.

Version 0.11.7
--------------

Released on April 14th 2016.
